--- a/sh/snmpd.conf
+++ b/sh/snmpd.conf
@@ -38,8 +38,7 @@
 # First, map the community name "public" into a "security name"
 
 #       sec.name  source          community
-#com2sec notConfigUser  default       public
-com2sec notConfigUser  10.3.19.238       public
+com2sec notConfigUser  10.3.63.137       public
 
 ####
 # Second, map the security name into a group name:
@@ -60,8 +59,7 @@ view    systemview    included   .1.3.6.1.2.1.25.1.1
 # Finally, grant the group read-only access to the systemview view.
 
 #       group          context sec.model sec.level prefix read   write  notif
-#access  notConfigGroup ""      any       noauth    exact  systemview none none
-access  notConfigGroup ""      any       noauth    exact  all  none none
+access  notConfigGroup ""      any       noauth    exact  all none none
 
 # -----------------------------------------------------------------------------
 
@@ -175,16 +173,6 @@ syscontact Root <root@localhost> (configure /etc/snmp/snmp.local.conf)
 #   system.sysServices.0 = 72
 
 
-###############################################################################
-# Logging
-#
-
-# We do not want annoying "Connection from UDP: " messages in syslog.
-# If the following option is commented out, snmpd will print each incoming
-# connection, which can be useful for debugging.
-
-dontLogTCPWrappersConnects yes
-
 # -----------------------------------------------------------------------------
 
 
@@ -265,7 +253,7 @@ dontLogTCPWrappersConnects yes
 #
 #  exec NAME PROGRAM [ARGS ...]
 #
-#  NAME:     A generic name. The name must be unique for each exec statement.
+#  NAME:     A generic name.
 #  PROGRAM:  The program to run.  Include the path!
 #  ARGS:     optional arguments to be passed to the program
 
@@ -458,12 +446,12 @@ dontLogTCPWrappersConnects yes
 # For specific usage information, see the man/snmpd.conf.5 manual page
 # as well as the local/passtest script used in the above example.
 
+# Added for support of bcm5820 cards.
+pass .1.3.6.1.4.1.4413.4.1 /usr/bin/ucd5820stat
+
 ###############################################################################
 # Further Information
 #
 #  See the snmpd.conf manual page, and the output of "snmpd -H".
-# 20130829.1153
-# 20130904.1124
-# 20130904.1545
-# 20130905.0953
-pass .1.3.6.1.4.1.89373.1 /usr/opi/raidcheck/raidcheck
+# 20120426.1614
+pass .1.3.6.1.4.1.89373.1 /usr/bin/perl /usr/opi/raidcheck/raidcheck
